<resources>
    <string name="app_name">IBA</string>
    <string name="action_settings">Settings</string>
    <string name="date_formats_api_date">EEE, dd MMM yyyy HH:mm:ss</string>
    <string name="default_api_date_format">yyyy-MM-dd\'T\'HH:mm:ss</string>
	<string name="content_date_seen">dd/MM/yyyy</string>
	<string name="message_status_date_format">yyyy-MM-dd</string>
	<string name="messages_date_format">yyyy-MM-dd</string>
	<string name="messages_time_format">HH:mm</string>
    <string name="toolbar_title_profile">Profile</string>
    <string name="toolbar_title_edit_bio">Edit Bio</string>
    <string name="toolbar_title_search">Search</string>
    <string name="toolbar_title_committees">Committees</string>
    <string name="toolbar_title_areas_of_practice">Areas of Practice</string>
	<string name="toolbar_title_countries">Countries</string>
	<string name="toolbar_title_conference">Conference</string>
    <string name="toolbar_title_favourites">Favourites</string>
    <string name="toolbar_title_user_profile">User Profile</string>
	<string name="toolbar_title_messages">Messages</string>
	<string name="toolbar_title_content">Content</string>
	<string name="toolbar_title_my_downloads">My Downloads</string>
    <string name="toolbar_title_iba_conference">IBA Conference</string>
    <string name="login_logo_content_descriptor">IBA Members Logo</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="login_remember_me">REMEMBER ME</string>
    <string name="login_contact_iba">CONTACT IBA</string>
	<string name="login_forgot_password">PASSWORD RESET</string>
    <string name="login_contact_iba_email_address">member@int-bar.org</string>
    <string name="login_contact_iba_email_subject">IBA Members Directory App Query</string>
    <string name="login_contact_iba_email_chooser_title">Send Email</string>
    <string name="login_validation_username_empty">No Email Entered</string>
    <string name="login_validation_password_empty">No Password Entered</string>
    <string name="login_failed_error_title">Unable to Login</string>
    <string name="login_failed_error_message">Invalid username or password.</string>
    <string name="login_failed_error_title_internet">Unable to Login</string>
    <string name="login_failed_error_message_internet">Unable to connect to server. Please check your internet connection.</string>
    <string name="login_failed_error_positive_button">OK</string>
    <string name="login_privilege_failed">Sorry can\'t login with your class.</string>
    <string name="profile_contact_info">Contact Info</string>
    <string name="profile_bio">Bio</string>
    <string name="profile_visibility_state_private">Your Profile is Private</string>
    <string name="profile_visibility_state_public">Your Profile is Public</string>
    <string name="profile_committees">Committees</string>
    <string name="profile_areas_of_practice">Areas of Practice</string>
    <string name="profile_no_committees">None</string>
    <string name="profile_no_areas_of_practices">None</string>
    <string name="profile_contact_iba">Contact IBA</string>
    <string name="profile_no_content">Not provided</string>
    <string name="profile_no_name">No name provided</string>
    <string name="profile_menu_contact_iba">contact IBA</string>
    <string name="profile_menu_logout">Sign Out</string>
    <string name="profile_photo_picker_title">Upload Photo</string>
    <string name="profile_no_phone_number">No phone number</string>
    <string name="profile_no_email">No email</string>
	<string name="profile_upgrade_membership_title">Upgrade Membership</string>
	<string name="profile_upgrade_membership_message">In order to view the profile page, you will need to upgrade your IBA membership. Upgrade now or contact the IBA for more information</string>
	<string name="profile_upgrade_membership_button">UPGRADE</string>
	<string name="profile_message">Message</string>
	<string name="profile_message_title">Message</string>
	<string name="profile_message_input_message_hint">Type your message</string>
	<string name="profile_message_send_button">Send</string>
	<string name="profile_message_view_profile_button">VIEW PROFILE</string>
	<string name="profile_message_date_format_today">Today</string>
	<string name="profile_message_date_format_yesterday">Yesterday</string>
	<string name="profile_message_send_fail_message">Failed to send message</string>
	<string name="profile_message_status_sending">Sending…</string>
	<string name="profile_message_status_failed">Failed. Tap to retry.</string>
	<string name="profile_message_delete_message">Are you sure you want to delete this message thread?</string>
	<string name="profile_message_delete_deleted">Message thread deleted</string>
	<string name="profile_message_last_seen">last seen: %1$s</string>
    <string name="bio_make_profile_public">Make your Profile Public?</string>
    <string name="bio_character_count">%1$d / 1024</string>
    <string name="search_result_no_profiles_found">No Profiles found</string>
    <string name="search_result_failed_error_title">Unable to Search</string>
    <string name="search_result_failed_error_message">Unable to connect to server. Please check your internet connection.</string>
    <string name="search_result_failed_error_positive_button">OK</string>
    <string name="search_profile_menu_favourite">Favourite</string>
    <string name="search_filter_first_name_hint">First Name</string>
    <string name="search_filter_surname_hint">Surname</string>
    <string name="search_filter_firm_name_hint">Firm Name</string>
	<string name="search_filter_conference_hint">Conference</string>
    <string name="search_filter_city_hint">City</string>
    <string name="search_filter_country_hint">Country</string>
    <string name="search_filter_committee_hint">Committee</string>
    <string name="search_filter_area_of_practice_hint">Area of Practice</string>
    <string name="search_filter_menu_clear_all">Clear All</string>
    <string name="data_picker_no_results">No Results</string>
    <string name="data_picker_menu_search">Search</string>
    <string name="data_picker_default_conference">Korea</string>
	<string name="data_picker_no_conferences">No Conferences</string>
    <string name="dialog_manager_no_internet_connection_dialog_title">No Internet</string>
    <string name="dialog_manager_no_internet_connection_dialog_message_profile_picture">You will need an internet connection to update your profile picture.</string>
    <string name="dialog_manager_no_internet_connection_dialog_message_bio">You will need an internet connection to update your biography.</string>
    <string name="dialog_manager_no_internet_connection_dialog_message_search">You will need an internet connection to search profiles.</string>
    <string name="dialog_manager_no_internet_connection_dialog_positive_button_message">OK</string>
    <string name="dialog_manager_no_internet_connection_dialog_message_saving">Unable to save profile information. Please check your internet connection.</string>
    <string name="dialog_manager_no_internet_connection_dialog_positive_button_saving">Retry</string>
    <string name="dialog_manager_no_internet_connection_dialog_negative_button_saving">Continue</string>
    <string name="dialog_manager_no_internet_connection_dialog_message_loading">Unable to load profile. Please check your internet connection.</string>
    <string name="dialog_manager_no_internet_connection_dialog_positive_button_loading">Retry</string>
    <string name="dialog_manager_no_internet_connection_dialog_negative_button_loading">Leave</string>
    <string name="favourites_no_profiles">No Profiles</string>
    <string name="session_expired_message">Session expired</string>
    <string name="missing_info_prompt_bio_message">Your profile is missing a biography. Would you like to add one now?</string>
    <string name="missing_info_prompt_bio_positive">Add now</string>
    <string name="missing_info_prompt_bio_neutral">Remind me later</string>
    <string name="missing_info_prompt_bio_negative">Cancel</string>
    <string name="missing_info_prompt_profile_message">Your profile is missing a profile picture. Would you like to add one now?</string>
    <string name="missing_info_prompt_profile_positive">Add now</string>
    <string name="missing_info_prompt_profile_neutral">Remind me later</string>
    <string name="missing_info_prompt_profile_negative">Cancel</string>
	<string name="messages_no_messages">No Messages</string>
	<string name="messages_delete_action">Delete</string>
	<string name="messages_delete_message">Are you sure you want to delete this message?</string>
	<string name="messages_delete_deleted">Message deleted</string>
	<string name="messages_date_format_yesterday">Yesterday</string>
	<string name="messages_date_format_today_at">Today at %1$s</string>
	<string name="content_filter_tab">All Content</string>
	<string name="content_no_content">No Content</string>
	<string name="content_download_header">My Downloads</string>
	<string name="content_detail_view_article_button">View Article</string>
	<string name="content_detail_download_action">Download</string>
	<string name="content_detail_delete_action">Delete</string>
	<string name="content_detail_delete_action_message">Are you sure you want you remove this content from downloads?</string>
	<string name="content_detail_delete_action_confirmed">Content removed</string>
	<string name="content_detail_download_action_complete">Content saved to downloads</string>
    <string name="content_detail_download_action_failed">Failed to download media</string>
	<string name="content_detail_download_action_already_downloaded">Already saved to downloads</string>
    <string name="content_detail_data_warning_title">Warning</string>
    <string name="content_detail_data_warning_message">You are about to stream an audio file over your mobile network. Connect to Wi-Fi or continue.</string>
	<string name="content_detail_data_warning_message_video">You are about to stream a video over your mobile network. Connect to Wi-Fi or continue.</string>
    <string name="content_detail_data_warning_continue">Continue</string>
	<string name="content_detail_no_internet_connection">Please connect to the internet to continue</string>
	<string name="content_detail_fail_to_load_media">Fail to load media</string>
	<string name="my_downloads_no_downloads">No Downloads</string>
	<string name="conference_main_header1">IBA 2017</string>
	<string name="conference_main_header2">Sydney</string>
	<string name="conference_main_header3">8-13 October</string>
	<string name="conference_main_description">The 2017 IBA Annual Conference will be held in Sydney, Australia’s leading global city. Recognised internationally as a future-focused and innovative business centre, Sydney provides headquarters for almost 40 per cent of the top 500 Australian corporations. As one of the world\'s most multicultural and connected cities, Sydney will be an ideal location for the largest and most prestigious event for international lawyers, providing an abundance of business and networking opportunities.</string>
	<string name="conference_schedule">Schedule \n세부 일정</string>
	<string name="conference_messaging_title">Delegate Search &amp; Messages</string>
	<string name="conference_messaging">Delegate Search &amp; Messages \n참가자 검색 및 메시지</string>
	<string name="conference_website">Website \n웹 사이트</string>
	<string name="conference_date_today">TODAY</string>
	<string name="conference_date_yesterday">YESTERDAY</string>
	<string name="conference_date_tomorrow">TOMORROW</string>
	<string name="conference_schedule_title">Schedule</string>
	<string name="schedule_your_event_title">YOU</string>
	<string name="schedule_all_event_title">ALL</string>
	<string name="schedule_your_event_title_section">Your Functions</string>
</resources>