<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.login.LoginActivity">

    <item
        android:id="@+id/action_favourite"
        android:orderInCategory="20"
        android:title="@string/search_profile_menu_favourite"
        android:icon="@drawable/fav"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_contact_iba"
        android:orderInCategory="90"
        android:title="@string/profile_contact_iba"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/profile_menu_logout"
        app:showAsAction="never" />
</menu>
