<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/login_credentials_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login_logo_content_descriptor"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/login_username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_content_padding"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            app:passwordToggleEnabled="true"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_contact_iba"
        android:text="@string/login_button"/>

    <Button
        android:id="@+id/login_contact_iba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/clear_background_button"
        android:text="@string/login_contact_iba" />

    <RelativeLayout
        android:id="@+id/login_bottom_action_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_credentials_view">

        <CheckBox
            android:id="@+id/login_remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:buttonTint="@android:color/white"/>

        <Button
            android:id="@+id/login_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/clear_background_button"
            android:layout_toEndOf="@id/login_remember_me_checkbox"
            android:text="@string/login_remember_me" />

        <Button
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/clear_background_button"
            android:text="@string/login_forgot_password" />
    </RelativeLayout>
</RelativeLayout>